# dendron

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SPEC.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
dendron-core/: Cargo.toml
dendron-core/src/: config.rs  error.rs  lib.rs  query.rs  schema_ops.rs
dendron-core/src/db/: connection.rs  mod.rs  postgres.rs  schema.rs  sqlite.rs  ssh.rs
dendron-core/src/security/: encryption.rs
dev/: dendron_dev.sqlite  dendron_dev.sqlite-shm  dendron_dev.sqlite-wal  postgres-init.sql  seed.sh  sqlite-seed.sql
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  migrations.rs  project.rs  query.rs  state.rs  team_config.rs
src-tauri/src/commands/: config.rs  connections.rs  export.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/db/: connection.rs  mod.rs  postgres.rs
src-tauri/src/security/: mod.rs
src/components/: CommandPalette.tsx  ConnectionDialog.tsx  ConnectionSidebar.tsx  DangerConfirmDialog.tsx  QueryEditor.tsx  ResultsTable.tsx  SchemaTree.tsx  ShortcutsDialog.tsx  StatusBar.tsx  TabBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  ContextMenu.tsx  Spinner.tsx
src/lib/: WorkspaceContext.tsx  sql-utils.ts  tauri.ts  types.ts  utils.ts
src/routes/: __root.tsx
