[package]
name = "dendron-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "json", "chrono", "uuid", "rust_decimal"] }
rust_decimal = "1"
sqlparser = "0.52"
sqlformat = "0.4"
thiserror = "2"
anyhow = "1"
toml = "0.9"
ring = "0.17"
base64 = "0.21"
csv = "1"
directories = "6"
